--- a/.env-req
+++ b/.env-req
@@ -1,3 +1,5 @@
-email=fromemail
+smtpserver=smtp.mailserverexample.com
+smtpport=smtpport
+donotreplyemail=fromemail
 password=password
 myemail=toemail
