--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "framer-motion": "^6.3.11",
     "next": "12.1.6",
     "nodemailer": "^6.7.5",
+    "path": "^0.12.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "sqlite": "^4.1.1",
+    "sqlite3": "^5.0.8"
   },
   "devDependencies": {
     "@types/node": "17.0.42",
