--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.1",
     "framer-motion": "^6.3.11",
     "next": "12.1.6",
+    "next-seo": "^5.5.0",
     "nodemailer": "^6.7.5",
     "path": "^0.12.7",
     "react": "18.2.0",
