--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "design",
+  "name": "ochoapro",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,8 +14,8 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "dotenv": "^16.0.1",
-    "framer-motion": "^6.3.11",
-    "next": "12.1.6",
+    "framer-motion": " 7.0.0",
+    "next": "12.2.4",
     "next-seo": "^5.5.0",
     "nodemailer": "^6.7.5",
     "path": "^0.12.7",
@@ -26,11 +26,11 @@
     "sqlite3": "^5.0.9"
   },
   "devDependencies": {
-    "@types/node": "17.0.42",
-    "@types/react": "18.0.12",
-    "@types/react-dom": "18.0.5",
-    "eslint": "8.17.0",
-    "eslint-config-next": "12.1.6",
-    "typescript": "4.7.3"
+    "@types/node": "18.6.5",
+    "@types/react": "18.0.17",
+    "@types/react-dom": "18.0.6",
+    "eslint": "8.21.0",
+    "eslint-config-next": "12.2.4",
+    "typescript": "4.7.4"
   }
 }
