--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.2.1",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@sendgrid/mail": "^7.7.0",
     "dotenv": "^16.0.1",
     "framer-motion": " 7.0.0",
     "next": "12.2.4",
