--- a/package.json
+++ b/package.json
@@ -9,30 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.0.2",
-    "@chakra-ui/react": "^2.2.1",
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
+    "@chakra-ui/icons": "^2.0.11",
+    "@chakra-ui/react": "^2.3.6",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@sendgrid/mail": "^7.7.0",
-    "dotenv": "^16.0.1",
-    "framer-motion": " 7.0.0",
+    "dotenv": "^16.0.3",
+    "framer-motion": "7.6.2",
     "next": "12.2.4",
-    "next-seo": "^5.5.0",
-    "nodemailer": "^6.7.5",
+    "next-seo": "^5.11.1",
+    "nodemailer": "^6.8.0",
     "path": "^0.12.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hotjar": "^5.2.0",
-    "react-icons": "^4.4.0",
-    "sqlite": "^4.1.1",
-    "sqlite3": "^5.0.9"
+    "react-icons": "^4.6.0"
   },
   "devDependencies": {
-    "@types/node": "18.6.5",
-    "@types/react": "18.0.17",
-    "@types/react-dom": "18.0.6",
-    "eslint": "8.21.0",
-    "eslint-config-next": "12.2.4",
-    "typescript": "4.7.4"
+    "@types/node": "18.11.7",
+    "@types/react": "18.0.24",
+    "@types/react-dom": "18.0.8",
+    "eslint": "8.26.0",
+    "eslint-config-next": "13.0.0",
+    "typescript": "4.8.4"
   }
 }
