--- a/package.json
+++ b/package.json
@@ -16,21 +16,21 @@
     "@sendgrid/mail": "^7.7.0",
     "dotenv": "^16.0.3",
     "framer-motion": "7.6.4",
-    "next": "12.3.2",
-    "next-seo": "^5.11.1",
+    "next": "^13.0.2",
+    "next-seo": "^5.13.0",
     "nodemailer": "^6.8.0",
     "path": "^0.12.7",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hotjar": "^5.2.0",
     "react-icons": "^4.6.0"
   },
   "devDependencies": {
     "@types/node": "18.11.9",
-    "@types/react": "18.0.24",
+    "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
     "eslint": "8.26.0",
-    "eslint-config-next": "13.0.1",
+    "eslint-config-next": "^13.0.2",
     "typescript": "4.8.4"
   }
 }
