--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "^13.0.2",
     "next-seo": "^5.13.0",
     "nodemailer": "^6.8.0",
+    "nookies": "^2.5.2",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
