--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@sendgrid/mail": "^7.7.0",
+    "cookies-next": "^2.1.1",
     "dotenv": "^16.0.3",
     "framer-motion": "7.6.4",
     "next": "^13.0.2",
