--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ochoapro",
+  "name": "zedir",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,29 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.0.12",
-    "@chakra-ui/react": "^2.4.1",
+    "@chakra-ui/icons": "^2.0.13",
+    "@chakra-ui/react": "^2.4.2",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@sendgrid/mail": "^7.7.0",
     "cookies-next": "^2.1.1",
     "dotenv": "^16.0.3",
-    "framer-motion": "7.6.12",
-    "next": "^13.0.5",
+    "framer-motion": "7.6.18",
+    "next": "^13.0.6",
     "next-seo": "^5.14.1",
     "nodemailer": "^6.8.0",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hotjar": "^5.2.0",
-    "react-icons": "^4.6.0"
+    "react-hotjar": "^5.3.0",
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
+    "@types/node": "18.11.10",
+    "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "eslint": "8.28.0",
-    "eslint-config-next": "^13.0.5",
+    "eslint-config-next": "^13.0.6",
     "typescript": "4.9.3"
   }
 }
