--- a/.env.local.example
+++ b/.env.local.example
@@ -1,5 +1,5 @@
-smtpserver=smtp.mailserverexample.com
-smtpport=smtpport
-donotreplyemail=fromemail
-password=password
-myemail=toemail
+SMTP_SERVER=smtp.mailserverexample.com
+SMTP_PORT=465
+DONOTREPLY_EMAIL=fromemailexample.com
+PASSWORD=password
+MY_EMAIL=toemail
