--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@marsidev/react-turnstile": "^0.2.1",
     "@sendgrid/mail": "^7.7.0",
     "cookies-next": "^2.1.1",
     "dotenv": "^16.0.3",
