--- a/package.json
+++ b/package.json
@@ -10,33 +10,34 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.0.17",
+    "@chakra-ui/icons": "^2.0.19",
     "@chakra-ui/react": "^2.6.1",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@marsidev/react-turnstile": "^0.2.1",
     "@sendgrid/mail": "^7.7.0",
     "cookies-next": "^2.1.1",
     "dotenv": "^16.0.3",
-    "framer-motion": "10.2.4",
-    "next": "^13.2.4",
-    "next-seo": "^5.15.0",
-    "nodemailer": "^6.9.1",
+    "framer-motion": "10.12.10",
+    "next": "^13.4.2",
+    "next-seo": "^6.0.0",
+    "nodemailer": "^6.9.2",
+    "npm-check-updates": "^16.10.12",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hotjar": "^5.4.1",
+    "react-hotjar": "^6.1.0",
     "react-icons": "^4.8.0",
     "react-intersection-observer": "^9.4.3"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^13.2.4",
-    "@types/node": "18.15.0",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "eslint": "8.36.0",
-    "eslint-config-next": "^13.2.4",
-    "next-sitemap": "^4.0.5",
-    "typescript": "4.9.5"
+    "@next/bundle-analyzer": "^13.4.2",
+    "@types/node": "20.1.4",
+    "@types/react": "18.2.6",
+    "@types/react-dom": "18.2.4",
+    "eslint": "8.40.0",
+    "eslint-config-next": "^13.4.2",
+    "next-sitemap": "^4.0.9",
+    "typescript": "5.0.4"
   }
 }
