--- a/package.json
+++ b/package.json
@@ -1,43 +1,25 @@
 {
-  "name": "halfnine",
+  "name": "halfnine.com",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next-sitemap --config next-sitemap.config.js",
-    "postbuild": "next-sitemap --config next-sitemap.config.js",
-    "start": "next start ",
+    "build": "next build",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.0.19",
-    "@chakra-ui/react": "^2.6.1",
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
-    "@marsidev/react-turnstile": "^0.2.1",
-    "@sendgrid/mail": "^7.7.0",
-    "cookies-next": "^2.1.1",
-    "dotenv": "^16.0.3",
-    "framer-motion": "10.12.10",
-    "next": "^13.4.2",
-    "next-seo": "^6.0.0",
-    "nodemailer": "^6.9.2",
-    "npm-check-updates": "^16.10.12",
-    "path": "^0.12.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hotjar": "^6.1.0",
-    "react-icons": "^4.8.0",
-    "react-intersection-observer": "^9.4.3"
-  },
-  "devDependencies": {
-    "@next/bundle-analyzer": "^13.4.2",
-    "@types/node": "20.1.4",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
-    "eslint": "8.40.0",
-    "eslint-config-next": "^13.4.2",
-    "next-sitemap": "^4.0.9",
-    "typescript": "5.0.4"
+    "@types/node": "20.4.1",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.44.0",
+    "eslint-config-next": "13.4.9",
+    "next": "13.4.9",
+    "postcss": "8.4.25",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.3.2",
+    "typescript": "5.1.6"
   }
 }
