--- a/.gitignore
+++ b/.gitignore
@@ -23,31 +23,13 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
 # local env files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env*.local
 
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
-
-
-# dev
-/data.json
-/yarn.lock
-.idea
-.vscode
-
-# sitemap
-# /public/robots.txt
-# /public/sitemap.xml
-
-
-/pages/dev
+next-env.d.ts
