--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@next/bundle-analyzer": "^13.4.19",
     "@types/node": "20.5.7",
+    "@types/nodemailer": "^6.4.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "eslint": "8.40.0",
